# pyinspect-cli

./: README.md  pyproject.toml
pyinspect_cli/: cli.py
pyinspect_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyinspect_cli/modules/: m01.py  m02.py  m03.py  m04.py  m05.py  m06.py  m07.py  m08.py
