[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinspect-cli"
version = "0.1.2"
description = "A CLI tool to inspect practical source codes"
authors = [
    { name = "Developer", email = "developer@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyinspect-cli = "pyinspect_cli.cli:main"

[tool.setuptools]
packages = ["pyinspect_cli", "pyinspect_cli.modules"]
